# myFAPIproj

./: item_views.py  main.py  pyproject.toml  sqlite3.db
alembic/: env.py
alembic/versions/: 2023_11_26_1006-a8fa824b0c7a_create_tables.py  2023_11_26_1011-086f343ae2e2_adding_user_table.py  2023_11_26_1032-18e8ac7f126d_adding_relationships_profile.py  2023_11_26_1210-05213771cae6_adding_user_relation_mixin_in_tables.py  2023_11_27_1101-d4402b1a6403_adding_m2m_oreders_prod.py  2023_11_27_1228-8dac6820c7e1_new_association_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: settings.py
core/models/: __init__.py  assosiate_table.py  base.py  db_helper.py  mixins.py  order.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  users_views.py
