[tool.poetry]
name = "myfastapi"
version = "0.1.0"
description = "My app"
authors = ["Docent"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pytest = "^7.4.3"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
